feat(build): add wildfly-maven-plugin for fast deploy/redeploy